<resources>
    <string name="app_name">DemoPeliculasNavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_peliculas">Peliculas</string>
    <string name="menu_registro">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="registro">Registro</string>
    <string name="trailer_teaser">Trailer / Teaser: %s</string>
</resources>