<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.demopeliculasnavdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.demopeliculasnavdrawer.ui.peliculas.PeliculasFragment"
        android:label="@string/menu_peliculas"
        tools:layout="@layout/fragment_peliculas" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.demopeliculasnavdrawer.ui.registro.RegistroFragment"
        android:label="@string/menu_registro"
        tools:layout="@layout/fragment_registro" />
</navigation>